@@ -6,7 +6,7 @@ from sqlalchemy import Float, ForeignKey
 from sqlalchemy.orm import Mapped, mapped_column, validates
 
 from ..constants.transaction_share import MIN_AMOUNT
-from ..validators import AmountValidator
+from ..validators import AmountValidator, TypeValidator
 from .base import Base
 
 if TYPE_CHECKING:
@@ -29,10 +29,16 @@ class TransactionShare(Base):
     """
 
     __tablename__ = "transaction_shares"
-    _amount_validator: "Validator" = AmountValidator(min_amount=MIN_AMOUNT)
+    _amount_validator: "Validator" = AmountValidator(
+        min_amount=MIN_AMOUNT, exclusive=False
+    )
+    _type_validator: "Validator" = TypeValidator([int])
+    _type_float_validator: "Validator" = TypeValidator([float])
 
     id: Mapped[int] = mapped_column(primary_key=True)
-    amount: Mapped[float] = mapped_column(Float, default=0.0, nullable=False)
+    amount: Mapped[float] = mapped_column(
+        Float, default=MIN_AMOUNT, nullable=False
+    )
     transaction_id: Mapped[int] = mapped_column(
         ForeignKey("transactions.id"), nullable=False
     )
@@ -51,4 +57,18 @@ class TransactionShare(Base):
             key (str): Name used for error messege.
             value (str): Value to be verified.
         """
+        self._type_float_validator(key, value)
         return self._amount_validator(key, value)
+
+    @validates("owner_id", "transaction_id")
+    def validate_int_type(self, key, value):
+        """Validates types of certain fields.
+
+        Uses TypeValidator to check if value
+            is one of correct type.
+
+        Args:
+            key (str): Name used for error messege.
+            value (str): Value to be verified.
+        """
+        return self._type_validator(key, value)
